# gh-workflow

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  generate.ts  package-lock.json  package.json  renovate.json
.github/workflows/: autofix.yml  ci.yml
crates/gh-workflow/: CHANGELOG.md  Cargo.toml
crates/gh-workflow-macros/: CHANGELOG.md  Cargo.toml
crates/gh-workflow-tailcall/: CHANGELOG.md  Cargo.toml
crates/gh-workflow-tailcall/src/: lib.rs  standard.rs  workflow.rs
crates/gh-workflow-tailcall/tests/: ci.rs
crates/gh-workflow/src/: artifacts.rs  cargo.rs  comment.yml  concurrency.rs  container.rs  ctx.rs  defaults.rs  env.rs  environment.rs  error.rs  event.rs  expression.rs  generate.rs  job.rs  lib.rs  permissions.rs  release_plz.rs  rust_flag.rs  secret.rs  step.rs  strategy.rs  toolchain.rs  workflow.rs
crates/gh-workflow/src/snapshots/: gh_workflow__generate__tests__add_needs_job.snap  gh_workflow__generate__tests__missing_add_job.snap
crates/gh-workflow/tests/: ci.rs  test-workflow.rs
crates/gh-workflow/tests/fixtures/: workflow-bench.yml  workflow-ci.yml  workflow-demo.yml  workflow-rust.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: cargo.rs  ctx.rs  event.rs  expr.rs  generate.rs  lib.rs  workflow.rs
tests/: autofix.rs  ci.rs
tests/fixtures/: workflow-ci.yml
workspace/example/: Cargo.toml  build.rs  workflow.yml
workspace/gh-workflow/: CHANGELOG.md  Cargo.toml  README.md
workspace/gh-workflow-gen/: Cargo.toml  build.rs
workspace/gh-workflow-gen/src/: main.rs
workspace/gh-workflow-release-plz/: CHANGELOG.md  Cargo.toml
workspace/gh-workflow-release-plz/src/: lib.rs  release.rs
workspace/gh-workflow-rs/: Cargo.toml
workspace/gh-workflow-rs/src/: agent.rs  error.rs  extensions.rs  lib.rs  model.rs  runtime.rs  schema.rs  toolchain.rs  worker.rs  workflow.rs
workspace/gh-workflow-rs/src/fixtures/: workflow-bench.yml  workflow-demo.yml  workflow-rust.yml
workspace/gh-workflow-rs/src/snapshots/: gh_workflow_rs__toolchain__tests__to_job.snap  gh_workflow_rs__toolchain__tests__to_job.snap.new  gh_workflow_rs__worker__tests__worker_generate.snap.new  gh_workflow_rs__worker__tests__worker_new.snap  gh_workflow_rs__worker__tests__worker_new.snap.new
workspace/gh-workflow-rust/: Cargo.toml
workspace/gh-workflow-rust/src/: lib.rs  toolchain.rs
workspace/gh-workflow/src/: cargo.rs  comment.yml  error.rs  event.rs  generate.rs  lib.rs  mustache.rs  rust_flag.rs  toolchain.rs  workflow.rs
workspace/gh-workflow/tests/: ci.rs  test-workflow.rs
workspace/gh-workflow/tests/fixtures/: workflow-bench.yml  workflow-ci.yml  workflow-demo.yml  workflow-rust.yml
