[package]
name = "gh-workflow-release-plz"
version = "0.1.0"
edition = "2021"

description = "A type safe implementation of Release Please powered by gh-workflow"
license = "Apache-2.0"
documentation = "https://docs.rs/gh-workflow-release-plz"
homepage = "https://github.com/tailcallhq/rust-gh-workflow"
repository = "https://github.com/tailcallhq/rust-gh-workflow"

[dependencies]
derive_setters = "0.1.6"
gh-workflow = { path = "../gh-workflow", version = "0.2.1" }
