[package]
name = "gh-workflow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
derive_more = { version = "1.0.0", features = ["from"] }
derive_setters = "0.1.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
insta = "1.40.0"
